fixed scrollbar on non-app site

--- a/app2.less
+++ b/app2.less
@@ -5,7 +5,7 @@
   padding-top: 18px;
 }
 
-body {
+body.angular-app {
   overflow: -moz-scrollbars-vertical;
   overflow-y: scroll;
 }
